# moa-debate

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  TASKS.md  pyproject.toml
.claude/: settings.json
.claude/rules/: architecture.md  model-safety.md
.specs/tasks/todo/: competitor-improvements.feature.md  research-augmented-routing.feature.md
claude-code/: moa-debate.md  moa-review.md  moa.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  PERSONAS.md  PROMPTS.md  TESTING.md  USE_CASES.md
docs/briefs/: research-augmented-routing-brief.md
docs/explorations/: research-augmented-routing-exploration.md
docs/specs/: superior-features.md
hooks/: README.md  install.sh  moa-review.sh  pre-commit  pre-push
src/moa/: __init__.py  adaptive.py  budget.py  cache.py  cli.py  config.py  context.py  debate.py  engine.py  events.py  export.py  health.py  history.py  models.py  orchestrator.py  outcomes.py  prompts.py  research.py  review.py  server.py  templates.py  verify.py
templates/examples/: acquire.yaml  launch.yaml  pivot.yaml  startup.yaml  strategy.yaml  sunset.yaml
tests/: VALIDATION.md  quality_checks.py  test_compare.py  test_debate_pipeline.py  test_e2e.py  test_engine.py  test_events.py  test_example_templates.py  test_export.py  test_outcomes.py  test_peer_pipeline.py  test_research.py  test_templates.py
